--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,39 @@ services:
     volumes:
       - ".:/projects"
     tty: true
+
+  strapi:
+    image: node:14
+    working_dir: /usr/src/app
+    environment:
+      DATABASE_HOST: postgres
+      DATABASE_PORT: 5432
+      DATABASE_NAME: strapi
+      DATABASE_USERNAME: strapi
+      DATABASE_PASSWORD: strapi
+    ports:
+      - "1337:1337"
+    volumes:
+      - ./strapi:/usr/src/app
+    entrypoint:
+      - sh
+    command:
+      - -c
+      - |
+        yarn install
+        yarn develop
+    depends_on:
+      - postgres
+    tty: true
+  
+  postgres:
+    image: postgres
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_DB: strapi
+      POSTGRES_USER: strapi
+      POSTGRES_PASSWORD: strapi
+    volumes:
+      - ./docker/data:/var/lib/postgresql/data
+      - ./docker/postgres/sql:/docker-entrypoint-initdb.d
